# MeddyBuddy

./: .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yaml  docker-compose.yml  pyproject.toml
medication/: forms.py  models.py  urls.py  views.py
medication/migrations/: 0001_initial.py  0002_rename_user_id_medication_user.py  0003_delete_medication.py
medication/templates/medication/: medication_add.html  medication_delete.html  medication_detail.html  medication_edit.html  medication_list.html
mongo/: models.py  mongo.py
setup/: settings.py  urls.py
setup/setup/: settings.py
static/: style.css
static/css/: addmedication.css  editmedication.css  login.css  register.css  style.css
static/css/account/: login.css  register.css
static/css/landing-page/: style.css
static/css/medication/: addmedication.css
static/css/profile/: style.css
static/js/: script.js
static/js/landing-page/: script.js
static/js/medication/: medicationDetail.js  script.js
templates/: base.html  dashboard.html  home.html  landing-page.html  login.html  logout.html  medicationForm.html  register.html  settconfig.html
timeline/: models.py
timeline/migrations/: 0001_initial.py
users/: admin.py  auth_backend.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_profile_health_card.py  0003_delete_profile.py  0003_profile_username.py  0004_alter_profile_username.py
users/templates/: profile.html
users/templates/registration/: login.html  register.html
