[tool.poetry]
name = "meddybuddy"
version = "0.1.0"
description = "AgeTech project to help elderly people keep track of their medications"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

packages = [
    { include = "./setup"},
    { include = "./users"},
    { include = "./medication"}
]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
psycopg2 = "^2.9.10"
python-decouple = "^3.8"
mongoengine = "^0.29.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
